--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Focus Timer</h1>
+        <h1>Focus Timer!</h1>
         <div class="timer">
             <div class="time-display" id="timeDisplay">25:00</div>
         </div>
         <div class="controls">
-            <button id="startBtn" class="btn start">Start</button>
-            <button id="pauseBtn" class="btn pause" disabled>Pause</button>
+            <button id="startPauseBtn" class="btn start">Start</button>
             <button id="stopBtn" class="btn stop" disabled>Stop</button>
             <button id="resetBtn" class="btn reset">Reset</button>
             <button id="add5Btn" class="btn add5">+5 min</button>
